# HQ_Battery

./: .gitignore  CLAUDE.md  CMakeLists.txt  HQ_Battery.pro  HQ_Battery_resource.rc  README.md  battery.db  battery.db-shm  battery.db-wal  main.cpp  main_demo.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  original_ui.txt  res.qrc
.claude/: settings.local.json
.qtc_clangd/: compile_commands.json
component/: BlueGlowWidget.cpp  BlueGlowWidget.h  BlueGlowWidgetDemo.cpp  BlueGlowWidgetDemo.h  ParameterSettingWidget.cpp  ParameterSettingWidget.h  addpowerform.cpp  addpowerform.h  addpowerform.ui  adduser.cpp  adduser.h  adduser.ui  adduserform.cpp  adduserform.h  adduserform.ui  batterychartwidget.cpp  batterychartwidget.h  batterydetailmainform.cpp  batterydetailmainform.h  batterydetailmainform.ui  batterygridwidget.cpp  batterygridwidget.h  batterylistform.cpp  batterylistform.h  batterylistform.ui  batterynumberform.cpp  batterynumberform.h  batterynumberform.ui  batterystatusform.cpp  batterystatusform.h  batterystatusform.ui  bms1infoshowform.cpp  bms1infoshowform.h  bms1infoshowform.ui  cfdrecordform.cpp  cfdrecordform.h  cfdrecordform.ui  chargeanddischargerecordform.cpp  chargeanddischargerecordform.h  chargeanddischargerecordform.ui  (+37 more)
debug/: HQ_Battery.ilk  HQ_Battery_resource.res  moc_predefs.h
lib/: lwdesigner.lib  lwdesignerd.lib
protocols/: battery.h  batteryinterface.h  batteryinterfacefactory.cpp  batteryinterfacefactory.h  batteryport.cpp  batteryport.h  bms1battery.cpp  bms1battery.h  bms1interface.cpp  bms1interface.h  bms1processor.cpp  bms1processor.h  communicationworker.h  communicationworkerfactory.h  modbustcpworker.cpp  modbustcpworker.h  productprocessors.cpp  productprocessors.h  protocol.cpp  protocol.h  serialdataprocessor.cpp  serialdataprocessor.h  serialdataprocessorfactory.cpp  (+3 more)
(+664 files in other folders)
